# simple_ros_gz_project

./: README.md
gz_models/: CMakeLists.txt  package.xml  readme.md
gz_models/hooks/: gz_models.dsv.in  readme.md
gz_models/models/diff_drive/: model.sdf  model.urdf
gz_models/models/sdf/: readme.md
gz_models/models/sdf/diff_drive/: model.sdf
gz_models/models/sdf/wall/: model.sdf
gz_models/models/urdf/: diff_drive.xacro  wall.xacro
gz_models/models/urdf/output/: diff_drive.sdf  diff_drive.urdf  readme.md  wall.sdf  wall.urdf
gz_worlds/: CMakeLists.txt  README.md  package.xml
gz_worlds/include/gz_worlds/: BasicSystem.hh  FullSystem.hh
gz_worlds/src/: BasicSystem.cc  FullSystem.cc  readme.md
gz_worlds/worlds/: diff_drive.sdf  empty_world.sdf  sensor_world.sdf
gz_worlds/worlds/baylands/: model.config  model.sdf
ros_application/: CMakeLists.txt  package.xml  readme.md
ros_application/nodes/: obstacle_avoider.cc
ros_gz_bringup/: CMakeLists.txt  package.xml  readme.md
ros_gz_bringup/config/: diff_drive.rviz  ros_gz_bridge_config.yaml
ros_gz_bringup/launch/: diff_drive.launch.py  rrbot_setup.launch.py  sensor_world.launch.py
ros_gz_example_bringup/launch/: diff_drive.launch.py
ros_gz_example_description/: CMakeLists.txt
ros_gz_example_description/models/diff_drive/: model.sdf
ros_gz_example_description/models/rrbot/: model.config
ros_gz_example_description/models/wall/: model.config
ros_gz_example_gazebo/: CMakeLists.txt
ros_gz_example_gazebo/worlds/: diff_drive.sdf
