<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_worlds</name>
  <version>1.0.0</version>
  <description>Gazebo-specific implementations for the simple_ros_gz_project</description>
  <maintainer email="huzhenkai@naver.com">Lehe Hu</maintainer>
  <license>Apache 2.0</license>
  <author>Lehe Hu</author>

  <depend>gz_common_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_sim_vendor</depend>

  <depend>gz_models</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
