<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_application</name>
  <version>1.0.0</version>
  <description>Application-specific implementations for the simple_ros_gz_project</description>
  <maintainer email="huzhenkai@naver.com">Lehe Hu</maintainer>
  <license>Apache 2.0</license>
  <author>Lehe Hu</author>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- <depend>gz_models</depend>
  <depend>gz_worlds</depend>
  <depend>ros_gz_bringup</depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>